# custom-treewidget

./: CMakeLists.txt  CustomStruct.h  GenericStruct.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  TreeUtils.cpp  TreeUtils.h  sample.json
docs/: Doxyfile
